--- a/web/index.html
+++ b/web/index.html
@@ -23,8 +23,24 @@
   <title>Shared Ledger</title>
   <link rel="manifest" href="manifest.json">
   <style>
+    :root {
+      --background-color: #FFFFFF;
+      --text-color: #000000;
+      --spinner-background: #f3f3f3;
+      --spinner-foreground: #000000;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --background-color: #121212;
+        --text-color: #FFFFFF;
+        --spinner-background: #333333;
+        --spinner-foreground: #FFFFFF;
+      }
+    }
+
     body {
-      background-color: #FFFFFF;
+      background-color: var(--background-color);
       margin: 0;
       padding: 0;
       display: flex;
@@ -42,7 +58,7 @@
 
     .loading-text {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      color: #000000;
+      color: var(--text-color);
       font-size: 24px;
       margin: 0;
     }
@@ -50,8 +66,8 @@
     .loading-spinner {
       width: 40px;
       height: 40px;
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid #000000;
+      border: 4px solid var(--spinner-background);
+      border-top: 4px solid var(--spinner-foreground);
       border-radius: 50%;
       animation: spin 1s linear infinite;
     }
